kubernetes/deployment.2.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: Team-Health-Check-Deployment
spec:
  replicas: 1
  template:
    metadata:
      labels: Team-Health-Check
      name: Team-Health-Check
    spec:
      containers:
      - name: Team-Health-Check-Responses
        image: team-health-check-responses
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
      - name: Team-Health-Check
        image: team-health-check
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
      - name: mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        command:
            - mongod
        ports:
          - containerPort: 27017
        volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          emptyDir: {}
