kubernetes/deployment_client.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: team-health-check-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: team-health-check-client
    spec:
      containers:
      - name: team-health-check-client
        image: team-health-check-client
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
