kubernetes/services_client.yml
---
apiVersion: v1
kind: Service
metadata:
    name: team-health-check-client
    labels:
      name: team-health-check-client
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    name: team-health-check-client
