kubernetes/services_mongo.yml
---
apiVersion: v1
kind: Service
metadata:
    name: mongo
    labels:
      name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: mongo
